[package]
name = "aqua-registry"
version = "2026.5.0"
edition = "2024"
description = "Aqua registry backend for mise"
authors = ["Jeff Dickey (@jdx)"]
license = "MIT"
repository = "https://github.com/jdx/mise"
homepage = "https://mise.en.dev"
readme = "README.md"
keywords = ["mise", "aqua", "registry", "package-manager"]
categories = ["development-tools"]
build = "build.rs"
include = [
  "/README.md",
  "/build.rs",
  "/src/**/*.rs",
  "/aqua-registry/LICENSE",
  "/aqua-registry/metadata.json",
  "/aqua-registry/registry.yaml",
]

[package.metadata.cargo-machete]
ignored = ["serde"]

[features]
default = []

[dependencies]
# Core dependencies
aqua-registry-types = { path = "../aqua-registry-types" }
serde_yaml = "0.9"
flate2 = "1"
rmp-serde = "1"
thiserror = "2"
eyre = "0.6"

# Async runtime
tokio = { version = "1", features = ["sync"] }

# Logging
log = "0.4"


[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[build-dependencies]
aqua-registry-types = { path = "../aqua-registry-types" }
eyre = "0.6"
flate2 = "1"
rmp-serde = "1"
serde_yaml = "0.9"
