[package]
name = "aqua-registry"
version = "2026.5.3"
edition = "2024"
description = "Aqua registry backend for mise"
authors = ["Jeff Dickey (@jdx)"]
license = "MIT"
repository = "https://github.com/jdx/mise"
homepage = "https://mise.en.dev"
readme = "README.md"
keywords = ["mise", "aqua", "registry", "package-manager"]
categories = ["development-tools"]
build = "build.rs"
include = [
  "/README.md",
  "/build.rs",
  "/src/**/*.rs",
  "/aqua-registry/LICENSE",
  "/aqua-registry/metadata.json",
  "/aqua-registry/registry.yaml",
]

[package.metadata.cargo-machete]
ignored = ["serde"]

[features]
default = []

[dependencies]
# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
eyre = "0.6"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14"
strum = { version = "0.28", features = ["derive"] }

# Template parsing and evaluation
expr-lang = "1"
versions = { version = "7", features = ["serde"] }
heck = "0.5"

# Async runtime
tokio = { version = "1", features = ["sync"] }

# Logging
log = "0.4"


[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[build-dependencies]
eyre = "0.6"
serde_yaml = "0.9"
