[package]
name = "mise-interactive-config"
version = "2026.1.12"
edition = "2024"
license = "MIT"
description = "Interactive TOML config editor for mise"
documentation = "https://docs.rs/mise-interactive-config"
homepage = "https://github.com/jdx/mise"
repository = "https://github.com/jdx/mise"
include = ["src/**/*", "build.rs", "mise.json"]

[lib]
name = "mise_interactive_config"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1" # Async trait support
console = "0.16" # Terminal control, key reading
fuzzy-matcher = "0.3" # Fuzzy matching for tool/setting pickers
tokio = { version = "1", features = [
  "rt",
  "sync",
] } # Async runtime for spawn_blocking
toml_edit = { version = "0.24", features = ["parse"] }
unicode-width = "0.2" # Text width calculation for cursor positioning
xx = { version = "2.5", default-features = false } # For display_path

[build-dependencies]
serde_json = "1"

[package.metadata.cargo-machete]
ignored = ["serde_json"]
