[package]
name = "mise-sigstore"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Sigstore verification helpers for mise"
documentation = "https://docs.rs/mise-sigstore"
homepage = "https://github.com/jdx/mise"
repository = "https://github.com/jdx/mise"

[lib]
name = "mise_sigstore"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
hex = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sigstore-verify = { version = "0.7.0", default-features = false }
snap = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util"] }
x509-cert = { version = "0.2", default-features = false, features = [
  "std",
  "pem",
] }
rustls-webpki = { version = "0.103", default-features = false, features = [
  "std",
  "aws-lc-rs",
] }
rustls-pki-types = "1"

[features]
default = ["rustls"]
native-tls = [
  "reqwest/native-tls",
  "sigstore-verify/native-tls",
  "sigstore-verify/tuf",
]
rustls = ["reqwest/rustls", "sigstore-verify/rustls", "sigstore-verify/tuf"]
