[package]
name = "vfox"
version = "2025.9.11"
edition = "2021"
license = "MIT"
description = "Interface to vfox plugins"
documentation = "https://docs.rs/vfox"
homepage = "https://github.com/jdx/mise"
repository = "https://github.com/jdx/mise"
include = ["src", "lua", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[lib]
name = "vfox"
path = "src/lib.rs"

[[bin]]
name = "vfox-cli"
path = "src/bin.rs"

[dependencies]
homedir = "0.3"
indexmap = "2"
itertools = "0.14"
log = "0.4"
mlua = { version = "0.11.0-beta.3", features = [
  "async",
  "lua51",
  "macros",
  "serialize",
  "send",
] }
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
] } # TODO: replace with xx
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "fs", "io-util"] }
url = "2"
xx = { version = "2", default-features = false, features = ["archive", "hash"] }

# cli dependencies
env_logger = { version = "0.11", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tempfile = "3"

[dev-dependencies]
insta = "1"
wiremock = "0.6"
#pretty_assertions = "1.4.0"

[features]
default = ["vendored-lua", "native-tls"]
cli = ["clap", "tokio/full", "env_logger"]
native-tls = ["xx/native-tls", "xx/http", "reqwest/native-tls"]
rustls = ["xx/rustls", "xx/http", "reqwest/rustls-tls"]
rustls-native-roots = [
  "reqwest/rustls-tls-native-roots",
  "xx/http",
  "xx/rustls-native-roots",
]
vendored-lua = ["mlua/vendored"]

# [workspace.metadata.release] - removed since this is now part of mise workspace
# pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
